1.登录问题，登陆后获取用户信息及权限